# POiIO26_OliwierJaworski_AlgorytmGenetyczny

./: CMakeLists.txt  TAlgorithm.cpp  TAlgorithm.h  TCandidate.cpp  TCandidate.h  TCandidate_Zad1.h  TCandidate_Zad2.h  TCandidate_Zad3.h  TKlasa.cpp  TKlasa.h  TParam.cpp  TParam.h  TPopulation.cpp  TPopulation.h  dynamiczneTworzenieObiektow.cpp  main.cpp
